# warehouse-robot-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WAREHOUSE_README.md  generate_map.py  package.xml  warehouse_map.pgm  warehouse_map.yaml
config/: nav2_params.yaml  slam_mapping.rviz  slam_toolbox_params.yaml
launch/: robot_bringup.launch.py  warehouse_world.launch.py
scripts/: dynamic_actors.py  explore_warehouse.py  goal_runner.py  hardcoded_mapping.py  hardcoded_mapping_v2.py  hardcoded_mapping_v3.py
urdf/: delivery_robot.urdf.xacro
worlds/: warehouse.sdf  warehouse_v2.sdf
