<?xml version="1.0"?>
<package format="3">
  <name>delivery_robot_sim</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy simulation package for GPS-free last-mile delivery robot research.</description>

  <maintainer email="mdsad@example.com">mdsad</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
